tests/type_errors/calling_non_function.sy
def main
: Int -> Int
: a = f ' a

def f
: Int
: = 1

--+ expected stdout: function: 0x55d2a5fed910

